tests/unit-fail-compilation/paramStorage.c
void fnc(static int a) {
        a = 4;
}
int main()
{
        fnc(2);
}
